Added webhooks. Improved README. Added config.template

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,7 @@
 server/
 diptico.db
 diptico.sql
-.apikey
-.adminid
-.publishid
-.trackings
+.config
 pyschtappe/
 
 # Byte-compiled / optimized / DLL files
