--- a/config.template
+++ b/config.template
@@ -1,8 +1,14 @@
 apikey=your_bot_token
 admin=your_telegram_id
 publisher=publisher_telegram_id
+group=group_url
+spoilers=spoilers_group_url
+channel=channel_url
+youtube=youtube_url
+discord=discord_url
+facebook=facebook_url
 listen=0.0.0.0
 ip=your_server_ip
 port=8443
-key=ferdinand.key
-cert=ferdinand.pem
+key=private_key.key
+cert=certificate.pem
