--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,18 @@
 APScheduler==3.6.3
-beautifulsoup4==4.9.3
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.10.0
 bs4==0.0.1
 cachetools==4.2.2
-certifi==2021.5.30
-chardet==4.0.0
-flake8==3.9.2
-html5lib==1.1
-idna==2.10
-lxml==4.6.3
-mccabe==0.6.1
-pycodestyle==2.7.0
-pyflakes==2.3.1
-python-telegram-bot==13.6
-pytz==2021.1
-requests==2.25.1
+certifi==2021.10.8
+charset-normalizer==2.0.9
+idna==3.3
+python-telegram-bot==13.8.1
+pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
+requests==2.26.0
 six==1.16.0
-soupsieve==2.2.1
+soupsieve==2.3.1
 tornado==6.1
-tzlocal==2.1
-urllib3==1.26.5
-webencodings==0.5.1
+tzdata==2021.5
+tzlocal==4.1
+urllib3==1.26.7
